2004-08-31  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object@integer): do not use TYPE-OF to
	print representation (fixnum vs bignum) because TYPE-OF returns a
	range like (INTEGER 0 16777215)

2004-08-31  Sam Steingold  <sds@gnu.org>

	support (:library :default) on win32
	* foreign.d [WIN32_NATIVE]: include <psapi.h>
	(open_library) [WIN32_NATIVE]: accept :DEFAULT
	(find_name) [WIN32_NATIVE]: when handle is NULL, use
	EnumProcessModules() to search all loaded libraries
	* makemake.in (LIBS) [win32]: link against psapi
	(makevars): depend on Makefile

2004-06-24  Bruno Haible  <bruno@clisp.org>

	* init.lisp: Export ensure-generic-function-using-class.
	* clos-package.lisp: Likewise.
	* clos-genfun2.lisp (check-signature-congruence)
	(check-method-qualifiers, invalid-method-qualifiers-error): New
	functions, moved here from clos-genfun3.lisp.
	(shared-initialize-<standard-generic-function>): During redefinition,
	check the new signature and the new method-combination against the
	existing methods. At the end, call finalize-fast-gf.
	(make-fast-gf): Don't call finalize-fast-gf here.
	* clos-genfun3.lisp (check-signature-congruence)
	(check-method-qualifiers, invalid-method-qualifiers-error): Moved to
	clos-genfun2.lisp.
	(ensure-generic-function-using-class-<t>): New function.
	(ensure-generic-function-using-class): New function.
	(ensure-generic-function): Completely rewritten.
	* clos-genfun5.lisp (ensure-generic-function-using-class): New generic
	function.

2004-08-30  Stefan Kain  <stefan.kain@freenet.de>

	* debug.d: translated all comments

2004-08-30  Sam Steingold  <sds@gnu.org>

	* modules/bindings/amigaos: removed

2004-08-30  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/configure.in: check for <winsock2.h> only when
	<sys/socket.h> is not found to avoid confusion on cygwin
	* modules/rawsock/test.tst [win32]: do not test socketpair()

2004-08-30  Sam Steingold  <sds@gnu.org>

	* foreign.d (open_library): accept :DEFAULT and :NEXT when